[gd_scene load_steps=58 format=2]

[ext_resource path="res://Ecenas/canasta.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ecenas/bola.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/posicion.gd" type="Script" id=3]
[ext_resource path="res://Ecenas/Window.tscn" type="PackedScene" id=4]
[ext_resource path="res://Ecenas/Fresa_bonus.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=6]
[ext_resource path="res://Scripts/fresa_bonus.gd" type="Script" id=7]
[ext_resource path="res://Ecenas/fresa_mala.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scripts/fresa_mala.gd" type="Script" id=9]
[ext_resource path="res://Sprites/backgrounds/bitmap.png" type="Texture" id=10]
[ext_resource path="res://Scripts/ParallaxBackground.gd" type="Script" id=11]
[ext_resource path="res://Sprites/sprites_buttons/boton_play.png" type="Texture" id=12]
[ext_resource path="res://Ecenas/fps_mb.tscn" type="PackedScene" id=13]
[ext_resource path="res://Fonts/PoetsenOne-Regular.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://sounds/clic.wav" type="AudioStream" id=16]
[ext_resource path="res://Scripts/fresa_mala2.gd" type="Script" id=17]
[ext_resource path="res://Ecenas/fresa_veneno.tscn" type="PackedScene" id=18]
[ext_resource path="res://Scripts/fresa_veneno.gd" type="Script" id=19]
[ext_resource path="res://Sprites/mancha_verde.png" type="Texture" id=20]
[ext_resource path="res://Scripts/fresa_veneno2.gd" type="Script" id=21]
[ext_resource path="res://Scripts/fresa_veneno3.gd" type="Script" id=22]
[ext_resource path="res://Sprites/reloj/reloj.8.png" type="Texture" id=23]
[ext_resource path="res://Sprites/backgrounds/fondo_negro.png" type="Texture" id=24]
[ext_resource path="res://Sprites/reloj/reloj.10.png" type="Texture" id=25]
[ext_resource path="res://Sprites/reloj/reloj.1.png" type="Texture" id=26]
[ext_resource path="res://Sprites/reloj/reloj.3.png" type="Texture" id=27]
[ext_resource path="res://Sprites/reloj/reloj.5.png" type="Texture" id=28]
[ext_resource path="res://Sprites/reloj/reloj.2.png" type="Texture" id=29]
[ext_resource path="res://Sprites/reloj/reloj.6.png" type="Texture" id=30]
[ext_resource path="res://Sprites/reloj/reloj.7.png" type="Texture" id=31]
[ext_resource path="res://Sprites/reloj/reloj.9.png" type="Texture" id=32]
[ext_resource path="res://Sprites/reloj/reloj.4.png" type="Texture" id=33]
[ext_resource path="res://Scripts/fresa_normal2.gd" type="Script" id=34]
[ext_resource path="res://Ecenas/fresa_ovni.tscn" type="PackedScene" id=35]
[ext_resource path="res://Scripts/fresa_ovni.gd" type="Script" id=36]
[ext_resource path="res://Sprites/end_game/ovni.png" type="Texture" id=37]
[ext_resource path="res://Scripts/fresa_ovni2.gd" type="Script" id=38]
[ext_resource path="res://Scripts/fresa_ovni_3.gd" type="Script" id=39]
[ext_resource path="res://Ecenas/fresa_ovni_two.tscn" type="PackedScene" id=40]
[ext_resource path="res://sounds/PowerUp.wav" type="AudioStream" id=41]
[ext_resource path="res://Sprites/end_game/luz_final.png" type="Texture" id=44]
[ext_resource path="res://Sprites/backgrounds/power_up_background.png" type="Texture" id=45]
[ext_resource path="res://Sprites/backgrounds/power_up_background_2.png" type="Texture" id=46]
[ext_resource path="res://Sprites/chispas.png" type="Texture" id=47]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 25 ), ExtResource( 32 ), ExtResource( 23 ), ExtResource( 31 ), ExtResource( 30 ), ExtResource( 28 ), ExtResource( 33 ), ExtResource( 27 ), ExtResource( 29 ), ExtResource( 26 ) ],
"loop": true,
"name": "reloj",
"speed": 1.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "back_black"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("ParallaxBackground/ParallaxLayer/quinientos:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 250, 400 ), Vector2( 250, 1200 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ParallaxBackground/ParallaxLayer/quinientos:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("ParallaxBackground/ParallaxLayer/quinientos:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 250, 1200 ), Vector2( 250, 400 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ParallaxBackground/ParallaxLayer/quinientos:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="DynamicFont" id=4]
size = 38
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=5]
size = 60
outline_size = 5
font_data = ExtResource( 15 )

[sub_resource type="Animation" id=6]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("TextureButton:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 501, 432 ), Vector2( 112, 432 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureButton:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("perdedor:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("perdedor:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -230, 362.305 ), Vector2( 100, 362.305 ) ]
}

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 45 ), ExtResource( 46 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 45 ) ],
"loop": true,
"name": "fondo_yellow",
"speed": 1.1
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 248, 10 )

[sub_resource type="DynamicFont" id=9]
size = 50
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 15 )

[sub_resource type="Animation" id=10]
length = 4.5
tracks/0/type = "value"
tracks/0/path = NodePath("campeon:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 4.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("button_end:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 4.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("luz_final:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 4.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ovni_mensaje:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 2, 2.9, 3, 3.1, 3.7, 4.1, 4.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 630.756, 140.762 ), Vector2( 630.756, 140.762 ), Vector2( 228.07, 254.797 ), Vector2( -144.326, -44.5449 ), Vector2( -236.979, -220.943 ), Vector2( 240.543, -222.725 ), Vector2( 370.614, 85.5263 ), Vector2( 271.993, 167.359 ), Vector2( 250, 95.09 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ovni_mensaje:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=11]
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CHISPAS:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("nuevo_record:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -4.0, 4.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("nuevo_record:custom_fonts/font:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 3.24901, 1, 2.73208, 1 ),
"update": 1,
"values": [ 40, 42, 40, 42, 40 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("nuevo_record:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"times": PoolRealArray( 0, 3.9 ),
"transitions": PoolRealArray( 0.183011, 1 ),
"update": 0,
"values": [ Color( 0.431373, 0.431373, 0.431373, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("nuevo_record:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 70.2847, 62.1039 ), Vector2( 70.2847, 75.1039 ), Vector2( 70.2847, 62.1039 ) ]
}

[sub_resource type="DynamicFont" id=12]
size = 40
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 15 )

[sub_resource type="Animation" id=13]
length = 6.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("ovni:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 250, 95 ), Vector2( 376, 95 ), Vector2( 124, 95 ), Vector2( 250, 95 ) ]
}

[node name="Main" type="Node2D" groups=[
"main",
]]
script = ExtResource( 6 )
BOLA = ExtResource( 2 )
BONUS = ExtResource( 5 )
MALA = ExtResource( 8 )

[node name="fps_mb" parent="." instance=ExtResource( 13 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_top = 770.0
margin_bottom = 810.0

[node name="reloj" type="AnimatedSprite" parent="."]
position = Vector2( 38, 37 )
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 1 )
animation = "reloj"

[node name="background" type="AnimationPlayer" parent="."]
anims/back_black = SubResource( 2 )
anims/black = SubResource( 3 )

[node name="perdedor" type="Label" parent="."]
margin_left = -230.0
margin_top = 362.305
margin_right = 75.0
margin_bottom = 408.305
rect_pivot_offset = Vector2( 152.42, 0.297546 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
text = "Perdedor"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 229.0
margin_right = 269.0
margin_bottom = 72.0
grow_horizontal = 2
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 501.0
margin_top = 432.0
margin_right = 1179.01
margin_bottom = 794.0
rect_rotation = -0.592096
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="transicion_perder" type="AnimationPlayer" parent="."]
anims/perder = SubResource( 6 )

[node name="mancha" type="Sprite" parent="."]
visible = false
position = Vector2( 254, 320 )
scale = Vector2( 0.8, 0.8 )
z_index = 4
texture = ExtResource( 20 )

[node name="background_power" type="AnimatedSprite" parent="."]
position = Vector2( 250, 400 )
frames = SubResource( 7 )
animation = "fondo_yellow"
frame = 5

[node name="clic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = 11.107

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 248, 1098.5 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 8 )

[node name="campeon" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 120.0
margin_top = 288.0
margin_right = 384.0
margin_bottom = 537.0
custom_fonts/font = SubResource( 9 )
text = "!Recuerda Que Eres Un Campeón¡"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_end" type="TextureButton" parent="."]
margin_left = 148.492
margin_top = 552.958
margin_right = 826.492
margin_bottom = 914.958
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="luz_final" type="Sprite" parent="."]
position = Vector2( 250, 538 )
scale = Vector2( 0.5, 0.5 )
z_index = -10
texture = ExtResource( 44 )

[node name="ovni_mensaje" type="Sprite" parent="."]
position = Vector2( 630.756, 140.762 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 37 )

[node name="mensaje_final" type="AnimationPlayer" parent="."]
anims/mensaje = SubResource( 10 )

[node name="juice" type="AnimationPlayer" parent="."]
anims/juice = SubResource( 11 )

[node name="nuevo_record" type="Label" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 70.2847
margin_top = 62.1039
margin_right = 434.285
margin_bottom = 122.104
rect_pivot_offset = Vector2( 177.143, 1.56768 )
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 0.615686, 0.117647, 1 )
text = "nuevo record"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Boss" type="Node" parent="."]

[node name="ovni" type="Sprite" parent="Boss"]
visible = false
position = Vector2( 250, 95 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 37 )

[node name="anim_ovni" type="AnimationPlayer" parent="Boss"]
anims/fase_uno = SubResource( 13 )

[node name="fresa_ovni" type="Position2D" parent="Boss"]
position = Vector2( 144, -326 )
script = ExtResource( 36 )
Fresa = ExtResource( 35 )

[node name="fresa_ovni2" type="Position2D" parent="Boss"]
position = Vector2( 328, -702 )
script = ExtResource( 38 )
Fresa = ExtResource( 35 )

[node name="fresa_ovni_3" type="Position2D" parent="Boss"]
position = Vector2( 192, -200 )
script = ExtResource( 39 )
Fresa = ExtResource( 40 )

[node name="spawns" type="Node" parent="."]

[node name="fresa_normal" type="Position2D" parent="spawns"]
position = Vector2( 187.265, -80 )
script = ExtResource( 3 )
BOLA = ExtResource( 2 )

[node name="fresa_normal2" type="Position2D" parent="spawns"]
position = Vector2( 328, -80 )
script = ExtResource( 34 )
BOLA = ExtResource( 2 )

[node name="fresa_bonus" type="Position2D" parent="spawns"]
position = Vector2( 250, -80 )
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}
BONUS = ExtResource( 5 )

[node name="fresa_mala" type="Position2D" parent="spawns"]
position = Vector2( 111.073, -204.395 )
script = ExtResource( 9 )
MALA = ExtResource( 8 )

[node name="fresa_mala2" type="Position2D" parent="spawns"]
position = Vector2( 412.955, -71.7048 )
script = ExtResource( 17 )
MALA = ExtResource( 8 )

[node name="fresa_veneno" type="Position2D" parent="spawns"]
position = Vector2( 223.982, -79.9277 )
script = ExtResource( 19 )
VENENO = ExtResource( 18 )

[node name="fresa_veneno2" type="Position2D" parent="spawns"]
position = Vector2( 102.342, -323.654 )
script = ExtResource( 21 )
VENENO = ExtResource( 18 )

[node name="fresa_veneno3" type="Position2D" parent="spawns"]
position = Vector2( 436.563, -147.527 )
script = ExtResource( 22 )
VENENO = ExtResource( 18 )

[node name="CHISPAS" type="Node2D" parent="."]
visible = false

[node name="chispas" type="Sprite" parent="CHISPAS"]
position = Vector2( 112.219, 79.3243 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 47 )

[node name="chispas2" type="Sprite" parent="CHISPAS"]
position = Vector2( 180.219, 106.824 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 47 )

[node name="chispas3" type="Sprite" parent="CHISPAS"]
position = Vector2( 236.719, 81.8243 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 47 )

[node name="chispas4" type="Sprite" parent="CHISPAS"]
position = Vector2( 288.719, 112.824 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 47 )

[node name="chispas5" type="Sprite" parent="CHISPAS"]
position = Vector2( 340.719, 80.8243 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 47 )

[node name="chispas6" type="Sprite" parent="CHISPAS"]
position = Vector2( 387.219, 117.324 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 47 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 11 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 0, 800 )

[node name="normal" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 250, 400 )
texture = ExtResource( 10 )

[node name="quinientos" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 250, 400 )
z_index = -101
texture = ExtResource( 24 )

[node name="slow_motion_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="sound_power" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 41 )

[node name="Window" parent="." instance=ExtResource( 4 )]

[node name="canasta" parent="." instance=ExtResource( 1 )]
position = Vector2( 250, 762.198 )
[connection signal="animation_finished" from="reloj" to="." method="_on_reloj_animation_finished"]
[connection signal="pressed" from="TextureButton" to="." method="_on_playagain_pressed"]
[connection signal="animation_finished" from="transicion_perder" to="." method="_on_transicion_perder_animation_finished"]
[connection signal="animation_started" from="transicion_perder" to="." method="_on_transicion_perder_animation_started"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="pressed" from="button_end" to="." method="_on_button_end_pressed"]
[connection signal="animation_finished" from="mensaje_final" to="." method="_on_mensaje_final_animation_finished"]
[connection signal="animation_finished" from="juice" to="." method="_on_juice_animation_finished"]
[connection signal="timeout" from="slow_motion_timer" to="." method="_on_slow_motion_timer_timeout"]
[connection signal="finished" from="sound_power" to="." method="_on_sound_power_finished"]
